--- a/GestionHoteleraFrontend/src/pages/AuthPage.css
+++ b/GestionHoteleraFrontend/src/pages/AuthPage.css
@@ -6,7 +6,7 @@
     align-items: center;
     background: none;
     font-family: 'Poppins', sans-serif;
-    color: white;
+    color: black    ;
 }
 
 .login-container, .register-container {
@@ -40,7 +40,7 @@
     padding: 12px;
     width: 400px;
     border: 1px solid #d4af37;
-    color: white;
+    color: black;
     background-color: transparent;
     font-family: inherit;
     font-size: 15px;
